Modernize runtime, generator, CI and docs across ZSI
- add profiling/benchmark tooling and release gate checks (including tag doc validation)

- introduce wsdl2py --fast prototype and improve generated import dedupe

- optimize parse/compound hot paths and enrich diagnostics with WSDL/namespace/element context

- add resolver URI hardening helper plus dedicated security/runtime diagnostic tests

- modernize interop/scripts entrypoints for Python 3 and refresh samples/doc/runbook documentation

- consolidate dev quality stack with ruff+black and wire lint into CI

--- a/interop/README
+++ b/interop/README
@@ -27,3 +27,21 @@ c.  WS-Routing (not yet implemented in ZSI :).  See WSDL at
     http://www.whitemesa.net/wsdl/interop_base_end.wsdl
 
 
+Modernization update (2026)
+===========================
+
+Status:
+- Interop assets are kept as legacy compatibility material.
+- Core execution and validation now happen through Python 3 test paths.
+- `interop/client.py` and `interop/server.py` are maintained for Python 3 runtime compatibility.
+
+Recommended local checks:
+
+python test\test_zsi.py
+python test\wsdl2py\runTests.py local
+
+Security note:
+- If interop scenarios use external resolver URLs, validate input first:
+  python scripts\security_input_guard.py --uri "https://schemas.example.internal/wsdl/service.wsdl" --allow-prefix "https://schemas.example.internal/"
+
+
