--- a/samples/WSGI/README
+++ b/samples/WSGI/README
@@ -19,6 +19,17 @@ DICT:  {'milk': {'cost': 3.1499999999999999, 'unit': 'gal'}}
 
 
 ==================
+modernization notes (2026)
+==================
+
+- This sample is legacy and may need small local adjustments depending on
+  runtime and environment.
+- For generator speed while prototyping, you can use:
+  python scripts\wsdl2py --fast samples\WSGI\SimpleEcho.wsdl
+- Use Python commands directly; no environment shell snippets are required.
+
+
+==================
  twisted.web2.wsgi example
      run the SimpleEcho service out of twisted's web2 wsgi
 
